merged 1.16.5, finalized stonecutter